--- a/views/usrhome.ejs
+++ b/views/usrhome.ejs
@@ -1,22 +1,18 @@
-
-<!doctype HTML>
+<!DOCTYPE html>
 
 <html>
 
 <head>
   <!-- setting viewport size for easier prediciton of scale -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <!-- begin bootstrap code -->
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<!-- end bootstrap code/ begin css entry -->
-  <link rel="stylesheet" href="style.css">
+
+
+  <!-- end bootstrap code/ begin css entry -->
+  <link rel="stylesheet" href='style.css'>
 
 </head>
 
@@ -24,8 +20,53 @@
 
 <body>
   <!-- navbar area -->
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
+
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href=< %=linkHome%> >KetchUp</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href=< %=linkHome%> >Home <span class="sr-only">(current)</span></a></li>
+          <li><a href=< %=linkApt%> >Schedule a meeting</a></li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href=< %=linkProfile%> >Profile</a></li>
+              <li><a href=< %=linkPref%> >Preferences</a></li>
+              <li role="separator" class="divider"></li>
+              <li>
+                <a href=< %=linkLogout%>
+                  <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+
+
+
+
+
+  <footer class="navbar navbar-default" "footer">
+    <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -36,84 +77,25 @@
         </button>
         <a class="navbar-brand" href="#">Brand</a>
       </div>
-
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-    <!-- end navbar area-->
-    <div class="row">
-      <div class="top_Text">
-        <div class="col-md-12">
-        This is the top text on the line
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3 rowStart">
-      </div>
-    <div class="col-xs-6 col-md-3 thumbnails">
-      <a href="#" class="thumbnail">
-        <img src="..." alt="...">
-          <p> this is the description for the box</p>
-      </a>
-    </div>
-    <div class="col-xs-6 col-md-3 thumbnails">
-      <a href="#" class="thumbnail">
-        <img src="..." alt="...">
-          <p> this is the description for the box</p>
-      </a>
-    </div>
-    <div class="col-xs-6 col-md-3 rowEnd">
-    </div>
-  </div>
-  <div class="row">
-    <div class="desc_Text">
-      <div class="col-md-12">
-      This is the text below the thubnails
-      </div>
-    </div>
-    <div class="btm_Desc">
-      <div class="col-md-12">
-      Second line below thumbnails
-      </div>
-    </div>
-</div>
-
-  <footer class="navbar navbar-default" "footer">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</footer>
+    </div>
+    <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </footer>
+
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+
+
+
+
 
 </body>
 
