--- a/views/usrhome.ejs
+++ b/views/usrhome.ejs
@@ -3,20 +3,18 @@
 <html>
 
 <head>
-  <!-- setting viewport size for easier prediciton of scale -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title></title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-
-
   <!-- end bootstrap code/ begin css entry -->
-  <link rel="stylesheet" href='style.css'>
+  <link rel='stylesheet' src='public/stylesheets/style.css' />
 
 </head>
-
-
 
 <body>
   <!-- navbar area -->
@@ -31,25 +29,24 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href=< %=linkHome%> >KetchUp</a>
+        <a class="navbar-brand" href= <%=linkHome %> >KetchUp</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href=< %=linkHome%> >Home <span class="sr-only">(current)</span></a></li>
-          <li><a href=< %=linkApt%> >Schedule a meeting</a></li>
+          <li class="active"><a href= <%=linkHome %> >Home <span class="sr-only">(current)</span></a></li>
+          <li><a href= <%=linkApt %> >Schedule a meeting</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href=< %=linkProfile%> >Profile</a></li>
-              <li><a href=< %=linkPref%> >Preferences</a></li>
+              <li><a href= <%=linkPref %> >Preferences</a></li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href=< %=linkLogout%>
+                <a href= <%=linkLogout %>
                   <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out</a>
               </li>
             </ul>
@@ -60,10 +57,21 @@
     </div>
     <!-- /.container-fluid -->
   </nav>
+  <div class="row">
+    <div class="top_Text">
+      <div class="col-md-12">
+        <h2>Confirmed Appointments</h2>
+      </div>
+    </div>
+  </div>
 
-
-
-
+  <div class="row">
+    <div class="desc_Text">
+      <div class="col-md-12">
+        <h2>Unconfirmed Appointments</h2>
+      </div>
+    </div>
+  </div>
 
   <footer class="navbar navbar-default" "footer">
     <div class="container-fluid">
@@ -75,7 +83,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="#">KetchUp</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <ul class="nav navbar-nav navbar-right">
@@ -88,20 +96,11 @@
   </footer>
 
 
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-
-
-
-
-
 </body>
-
-
-
-
-
 
 </html>
