added to accounts.js and added dotenv

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -57,7 +57,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     <!-- end navbar area-->
-    <form action="/testaccountcreation" method="post">
+    <form action="/signup" method="post">
        <label for="username">Enter a Username
          <input type="text" name="username"></input>
        </label>
