finished login logic

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -95,6 +95,16 @@
     </div>
 </div>
 
+<form action="/login" method="post">
+   <label for="username">Enter a Username
+     <input type="text" name="username"></input>
+   </label>
+   <label for="email">Enter an Email
+     <input type="text" name="password"></input>
+   </label>
+   <button type="submit"></button>
+ </form>
+
   <footer class="navbar navbar-default" "footer">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
