--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -117,6 +117,10 @@ background-image: linear-gradient(to right bottom, #6949DE 0%, #6BFFCE 100%, #FF
                  0px 24px 2px rgba(0,0,0,0.1),
                  0px 34px 30px rgba(0,0,0,0.1);
 }
+
+.form-group{
+  padding-top: 40px;
+}
 /*.signupForm:hover{109CFF
   background-color: -webkit-gradient(
   	linear,
@@ -125,11 +129,11 @@ background-image: linear-gradient(to right bottom, #6949DE 0%, #6BFFCE 100%, #FF
   	colorb -stop(0.77, #6974DA),
   	color-stop(1, #6AD2D2)
   );*/
-  background-image: -o-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
+  /*background-image: -o-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
   background-image: -moz-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
   background-image: -webkit-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
   background-image: -ms-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-  background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);}
+  background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);}*/
 
 /*div {
   transition: background-color 0.5s ease;
