--- a/views/pref.ejs
+++ b/views/pref.ejs
@@ -59,7 +59,9 @@
 <!-- end navbar area _______________________________ -->
 
 <div class="bigBox">
-  <form class="form-horizontal">
+  <div class="leftBox col-md-3">
+  </div>
+  <form class="form-horizontal col-md-6">
     <div class="form-group">
       <label for="inputUser3" class="col-sm-2 control-label">User ID</label>
       <div class="col-sm-10">
@@ -102,6 +104,8 @@
     </div>
 
   </form>
+  <div class="rightBox col-md-3">
+</div>
 </div>
 
 
