update forms with database fields

--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -75,6 +75,7 @@
           <input type="text" class="form-control" name='mtgDate' id="mtgDate" placeholder="meeting date" rows="3">
           <input type="text" class="form-control" name='mtgDuration' id="mtgDuration" placeholder="meeting duration" rows="3">
           <input type="text" class="form-control" name='mtgDesc' id="mtgDesc" placeholder="meeting description" rows="3">
+          <input type="text" class="form-control" name='mtgInvite' id="mtgInvite" placeholder="meeting invite" rows="3">
           <input type="text" class="form-control" name='mtgLocation' id="mtgLocation" placeholder="location" rows="3">
         </div>
       </div>
