worked on some formatting for apt sch and the forms

--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -60,6 +60,9 @@
 <!-- end navbar area_____________________________ -->
 <div class="bigBox">
   <div class='container'>
+    <div class="leftBox col-md-3">
+    </div>
+    <div class="mainbox col-md-6">
     <div class='row'>
       <div class='col-md-12'>
         <h1>Select your location</h1>
@@ -87,6 +90,11 @@
 
     </form>
   </div>
+  <div clas="rigthBox col-md-3">
+  </div>
+  </div>
+</div>
+<div class="extension">
 </div>
 
 
