--- a/views/login.ejs
+++ b/views/login.ejs
@@ -80,6 +80,7 @@
        <div class="rightSpace">
        </div>
    </div>
+   </div>
 
   <footer class="navbar navbar-default" "footer">
   <div class="container-fluid">
