--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,50 +73,48 @@ background-image: linear-gradient(to right bottom, #6949DE 0%, #6BFFCE 100%, #FF
 }
 .signupForm {
   display: block;
-  transition: background-color 0.5s ease;
-  background-color: white;
+  background: -webkit-gradient(
+  	linear,
+  	left top,
+  	right bottom,
+  	color-stop(0.77, #6974DA),
+  	color-stop(1, #6AD2D2)
+  );
+background-image: -o-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
+background-image: -moz-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
+background-image: -webkit-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
+background-image: -ms-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
+background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);
+
   postion: relative;
   top: 100px;
   height: 500px;
   width: 500px;
-
-
-    text-shadow: 0px 3px 0px #b2a98f,
-                 0px 14px 10px rgba(0,0,0,0.15),
-                 0px 24px 2px rgba(0,0,0,0.1),
-                 0px 34px 30px rgba(0,0,0,0.1);
-1
-2
-3
-4
-    text-shadow: 0px 3px 0px #b2a98f,
-                 0px 14px 10px rgba(0,0,0,0.15),
-                 0px 24px 2px rgba(0,0,0,0.1),
-                 0px 34px 30px rgba(0,0,0,0.1);
 }
 .loginForm {
   display: block;
-  transition: background-color 0.5s ease;
-  background-image: url("http://c8.alamy.com/comp/A0PFF9/water-ripples-blue-calm-calming-reflection-deep-shallow-clear-swimming-A0PFF9.jpg");
+  background: -webkit-gradient(
+  	linear,
+  	left top,
+  	right bottom,
+  	color-stop(0.77, #6974DA),
+  	color-stop(1, #6AD2D2)
+  );
+background-image: -o-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
+background-image: -moz-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
+background-image: -webkit-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
+background-image: -ms-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
+background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);
+
   postion: relative;
   top: 100px;
   height: 400px;
-  width: 400px;
-
-
-    text-shadow: 0px 3px 0px #b2a98f,
-                 0px 14px 10px rgba(0,0,0,0.15),
-                 0px 24px 2px rgba(0,0,0,0.1),
-                 0px 34px 30px rgba(0,0,0,0.1);
-1
-2
-3
-4
-    text-shadow: 0px 3px 0px #b2a98f,
-                 0px 14px 10px rgba(0,0,0,0.15),
-                 0px 24px 2px rgba(0,0,0,0.1),
-                 0px 34px 30px rgba(0,0,0,0.1);
+  width: 500px;
 }
+.extension {
+  height: 100px;
+}
+
 /*.signupForm:hover{109CFF
   background-color: -webkit-gradient(
   	linear,
@@ -125,11 +123,6 @@ background-image: linear-gradient(to right bottom, #6949DE 0%, #6BFFCE 100%, #FF
   	colorb -stop(0.77, #6974DA),
   	color-stop(1, #6AD2D2)
   );*/
-  background-image: -o-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-  background-image: -moz-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-  background-image: -webkit-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-  background-image: -ms-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-  background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);}
 
 /*div {
   transition: background-color 0.5s ease;
