--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -29,24 +29,24 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href= <%=linkHome %> >KetchUp</a>
+        <a class="navbar-brand" href=< %=linkHome %> >KetchUp</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href= <%=linkHome %> >Home <span class="sr-only">(current)</span></a></li>
-          <li><a href= <%=linkApt %> >Schedule a meeting</a></li>
+          <li class="active"><a href=< %=linkHome %> >Home <span class="sr-only">(current)</span></a></li>
+          <li><a href=< %=linkApt %> >Schedule a meeting</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href= <%=linkPref %> >Preferences</a></li>
+              <li><a href=< %=linkPref %> >Preferences</a></li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href= <%=linkLogout %>
+                <a href=< %=linkLogout %>
                   <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out</a>
               </li>
             </ul>
@@ -57,38 +57,40 @@
     </div>
     <!-- /.container-fluid -->
   </nav>
-<!-- end navbar area_____________________________ -->
-<div class="bigBox">
-  <div class='container'>
-    <div class='row'>
-      <div class='col-md-12'>
-        <h1>Select your location</h1>
+  <!-- end navbar area_____________________________ -->
+  <div class="bigBox">
+    <div class='container'>
+      <div class='row'>
+        <div class='col-md-12'>
+          <h1>Select your location</h1>
+        </div>
       </div>
+
+      <div id='map'></div>
+
+      <form class="form-horizontal" method="POST" action="/aptSch">
+        <div class="form-group">
+          <label for="inputPassword3" class="col-sm-2 control-label">Meeting Information</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" name='mtgInvite' id="mtgInvite" placeholder="meeting invite" rows="3">
+            <input type="text" class="form-control" name='mtgAddress' id="mtgAddress" placeholder="address" rows="3">
+            <input type='hidden' name='loc_lat' id='loc_lat'>
+            <input type='hidden' name='loc_lng' id='loc_lng'>
+            <input type="text" class="form-control" name='mtgDate' id="mtgDate" placeholder="meeting date and time" rows="3">
+            <input type="text" class="form-control" name='mtgDuration' id="mtgDuration" placeholder="meeting duration" rows="3">
+            <input type="text" class="form-control" name='mtgDesc' id="mtgDesc" placeholder="meeting description" rows="3">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Confirm Meeting</button>
+          </div>
+        </div>
+
+      </form>
     </div>
-
-    <div id='map'></div>
-
-    <form class="form-horizontal" method="POST" action="/aptSch">
-      <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Meeting Information</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" name='mtgDate' id="mtgDate" placeholder="meeting date" rows="3">
-          <input type="text" class="form-control" name='mtgDuration' id="mtgDuration" placeholder="meeting duration" rows="3">
-          <input type="text" class="form-control" name='mtgDesc' id="mtgDesc" placeholder="meeting description" rows="3">
-          <input type="text" class="form-control" name='mtgInvite' id="mtgInvite" placeholder="meeting invite" rows="3">
-          <input type="text" class="form-control" name='mtgLocation' id="mtgLocation" placeholder="location" rows="3">
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Confirm Meeting</button>
-        </div>
-      </div>
-
-    </form>
   </div>
-</div>
 
 
   <footer class="navbar navbar-default" "footer">
