--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Select your location</title>
 
-  <link rel="stylesheet" href="/stylesheets/style.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="/stylesheets/stylemaps.css" media="screen" title="no title" charset="utf-8">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -71,56 +71,52 @@
 
     <div id='map'></div>
 
-    <form class="form-horizontal" method="POST" action="/aptSch">
+    <form class="form-horizontal">
       <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Meeting Information</label>
         <div class="col-sm-10">
+          <input type="text" class="form-control" name='mtgName' id="mtgName" placeholder="meeting name" rows="3">
           <input type="text" class="form-control" name='mtgDate' id="mtgDate" placeholder="meeting date" rows="3">
-          <input type="text" class="form-control" name='mtgDuration' id="mtgDuration" placeholder="meeting duration" rows="3">
-          <input type="text" class="form-control" name='mtgDesc' id="mtgDesc" placeholder="meeting description" rows="3">
-          <input type="text" class="form-control" name='mtgInvite' id="mtgInvite" placeholder="meeting invite" rows="3">
+          <input type="text" class="form-control" name='mtgTime' id="mtgTime" placeholder="meeting time" rows="3">
           <input type="text" class="form-control" name='mtgLocation' id="mtgLocation" placeholder="location" rows="3">
         </div>
       </div>
 
-      <div class="form-group">
+      <div>
         <div class="col-sm-offset-2 col-sm-10">
           <button type="submit" class="btn btn-default">Confirm Meeting</button>
         </div>
       </div>
-
     </form>
   </div>
   <div clas="rigthBox col-md-3">
   </div>
   </div>
 </div>
-<div class="extension">
-</div>
 
 
-  <footer class="navbar navbar-default" "footer">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">KetchUp</a>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-      </ul>
+
+<footer class="navbar navbar-default" "footer">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">KetchUp</a>
     </div>
-    <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </footer>
-
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Link</a></li>
+    </ul>
+  </div>
+  <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
+</footer>
 
 
 
