--- a/views/pref.ejs
+++ b/views/pref.ejs
@@ -59,9 +59,20 @@
 <!-- end navbar area _______________________________ -->
 
 <div class="bigBox">
+  <div class="row">
   <div class="leftBox col-md-3">
   </div>
-  <form class="form-horizontal col-md-6">
+    <div class="extension col-md-6 mainContainer">
+      <p> User Preferences </p>
+    </div>
+    <div class="rightBox col-md-3">
+    </div>
+  </div>
+  <div class="row">
+  <div class="leftBox col-md-3">
+  </div>
+    <div class="container col-md-6">
+  <form class="form-horizontal">
     <div class="form-group">
       <label for="inputUser3" class="col-sm-2 control-label">User ID</label>
       <div class="col-sm-10">
@@ -104,7 +115,10 @@
     </div>
 
   </form>
+</div>
   <div class="rightBox col-md-3">
+</div>
+</div>
 </div>
 </div>
 
