--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -6,122 +6,104 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Select your location</title>
+  <title></title>
 
-  <link rel="stylesheet" href="/stylesheets/stylemaps.css" media="screen" title="no title" charset="utf-8">
-
+  <link rel="stylesheet" href="/stylesheets/style.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <script src='public/javascript/navBar.js'></script>
 </head>
 
 <body>
-  <!-- navbar area -->
-
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href= <%=linkHome %> >KetchUp</a>
+        <a class="navbar-brand" href= <%=linkHome %> >ketchUp</a>
       </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href= <%=linkHome %> >Home <span class="sr-only">(current)</span></a></li>
-          <li><a href= <%=linkApt %> >Schedule a meeting</a></li>
+        <ul id='nav' class="nav navbar-nav">
+          <li class='active'><a href= <%=linkHome %> >home <span class="sr-only"</span></a></li>
+          <li><a href= <%=linkApt %> >schedule a meeting</a></li>
         </ul>
-
-        <ul class="nav navbar-nav navbar-right">
+        <ul id='nav' class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href= <%=linkPref %> >Preferences</a></li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">account <span class="caret"></span></a>
+            <ul id='nav' class="dropdown-menu">
+              <li><a href= <%=linkPref %> >preferences</a></li>
               <li role="separator" class="divider"></li>
               <li>
                 <a href= <%=linkLogout %>
-                  <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out</a>
+                  <span class="badge"></span>
+                  <span class="glyphicon glyphicon-off" aria-hidden="true"></span> log out</a>
               </li>
             </ul>
           </li>
         </ul>
       </div>
-      <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
   </nav>
-<!-- end navbar area_____________________________ -->
-<div class="bigBox">
+
+
   <div class='container'>
-    <div class="leftBox col-md-3">
-    </div>
-    <div class="mainbox col-md-6">
+
     <div class='row'>
       <div class='col-md-12'>
-        <h1>Select your location</h1>
+        <h1 class='aptSchHeader'>schedule a meeting</h1>
       </div>
     </div>
 
-    <div id='map'></div>
-
-    <form class="form-horizontal">
-      <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Meeting Information</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" name='mtgName' id="mtgName" placeholder="meeting name" rows="3">
-          <input type="text" class="form-control" name='mtgDate' id="mtgDate" placeholder="meeting date" rows="3">
-          <input type="text" class="form-control" name='mtgTime' id="mtgTime" placeholder="meeting time" rows="3">
-          <input type="text" class="form-control" name='mtgLocation' id="mtgLocation" placeholder="location" rows="3">
-        </div>
+    <div class='row'>
+      <div class='col-md-4'>
+        <div id='map'></div>
       </div>
+      <div class='col-md-8'>
+        <form class="form-horizontal">
+          <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label"></label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name='mtgName' id="mtgName" placeholder="meeting name" rows="3">
+              <input type="text" class="form-control" name='mtgDate' id="mtgDate" placeholder="meeting date" rows="3">
+              <input type="text" class="form-control" name='mtgTime' id="mtgTime" placeholder="meeting time" rows="3">
+              <input type="text" class="form-control" name='mtgLocation' id="mtgLocation" placeholder="location" rows="3">
+              <button type="submit" class="btn btn-default">Confirm Meeting</button>
 
-      <div>
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Confirm Meeting</button>
-        </div>
+            </div>
+          </div>
       </div>
-    </form>
-  </div>
-  <div clas="rigthBox col-md-3">
-  </div>
-  </div>
-</div>
-
-
-
-<footer class="navbar navbar-default" "footer">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">KetchUp</a>
     </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Link</a></li>
-    </ul>
   </div>
-  <!-- /.navbar-collapse -->
+
+
+  <div class="panel panel-default">
+    <div class="panel-footer">
+      <div class='row'>
+        <div class='col-md-6'>
+          <ul class='panel-footer-left'>
+            <ol><a href= <%=linkHome %> >home </a></ol>
+            <ol><a href= <%=linkApt %> >schedule a meeting</a></ol>
+            <ol><a href= <%=linkPref %> >preferences</a></ol>
+          </ul>
+        </div>
+        <div class='col-md-6'>
+          <ul class='panel-footer-right'>
+            <ol>designed by</ol>
+            <ol><a href='https://github.com/micah-eberhard'>Micah Eberhard </a></ol>
+            <ol><a href='https://github.com/KeenanHoffman'>Keenan Hoffman </a></ol>
+            <ol><a href='https://github.com/lkhohn'>Lindsay Hohn </a></ol>
+            <ol><a href='https://github.com/James80401'>James Shield </a></ol>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
-  <!-- /.container-fluid -->
-</footer>
 
 
 
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="javascript/maps.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBV27rjUQoC_np17lGCrD4hmuIpA0ne4pg&callback=initMap&signed_in=true&libraries=places,visualization" async defer></script>
 
