--- a/views/navBar.ejs
+++ b/views/navBar.ejs
@@ -1,6 +1,5 @@
-<!doctype HTML>
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -15,8 +14,6 @@
   <script src='public/javascript/navBar.js'></script>
 
 </head>
-
-
 
 <body>
   <nav class="navbar navbar-default">
@@ -47,45 +44,6 @@
     </div>
   </nav>
 
-  <div class="bigBox">
-    <div class="row">
-      <div class="leftspace col-md-3">
-      </div>
-      <div class="signupForm col-md-6">
-        <div class="row">
-          <div class="leftBox col-md-4">
-          </div>
-          <div class="title col-md-4"> WELCOME BACK PLEASE LOGIN
-            <br> </div>
-          <div class="leftBox col-md-4">
-          </div>
-        </div <form action="/signup" method="post">
-        <div class="formBox">
-          <label for="username">Enter a Username
-            <br>
-            <input type="text" name="username" placeholder="Put your Username here!"></input>
-          </label>
-        </div>
-        <div class="formBox">
-          <label for="email">Enter an Email
-            <br>
-            <input type="text" name="email" placeholder="What's your favorite ID?"></input>
-          </label>
-        </div>
-        <div class="formBox">
-          <label for="password">Create a Password
-            <br>
-            <input type="text" name="password" placeholder="shhhh don't tell anybody"></input>
-          </label>
-        </div>
-        <button type="submit">Submit</button>
-        </form>
-      </div>
-      <div class="rightSpace col-md-3">
-      </div>
-    </div>
-  </div>
-  </div>
 
 
   <div class="panel panel-default">
@@ -113,7 +71,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
