fixed bug in google maps

--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -65,7 +65,7 @@
               <input type="text" class="form-control" name='mtgName' id="mtgName" placeholder="meeting name" rows="3">
               <input type="text" class="form-control" name='mtgDate' id="mtgDate" placeholder="meeting date" rows="3">
               <input type="text" class="form-control" name='mtgTime' id="mtgTime" placeholder="meeting time" rows="3">
-              <input type="text" class="form-control" name='mtgLocation' id="mtgLocation" placeholder="location" rows="3">
+              <input type="text" class="form-control" name='mtgAddress' id="mtgAddress" placeholder="location" rows="3">
               <button type="submit" class="btn btn-default">Confirm Meeting</button>
 
             </div>
