--- a/views/pref.ejs
+++ b/views/pref.ejs
@@ -49,55 +49,50 @@
 
   <div class="bigBox">
     <div class="row">
-      <div class="leftBox col-md-3">
-      </div>
-      <div class="extension col-md-6 mainContainer">
-        <p> User Preferences </p>
-      </div>
-      <div class="rightBox col-md-3">
+      <div class="leftBox col-md-12">
+        <h1 class='prefHeader'> user preferences </h1>
       </div>
     </div>
+
     <div class="row">
-      <div class="leftBox col-md-3">
-      </div>
-      <div class="container col-md-6">
+      <div class="container">
         <form class="form-horizontal">
-          <div class="form-group">
+          <div class="form-group" id='form-group-pref'>
             <label for="inputUser3" class="col-sm-2 control-label">User ID</label>
-            <div class="col-sm-10">
+            <div class="col-sm-8">
               <input type="text" class="form-control" id="inputUser3" placeholder="change your userID">
             </div>
           </div>
 
-          <div class="form-group">
+          <div class="form-group" id='form-group-pref'>
             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10">
+            <div class="col-sm-8">
               <input type="email" class="form-control" id="inputEmail3" placeholder="update your email">
             </div>
           </div>
 
-          <div class="form-group">
+          <div class="form-group" id='form-group-pref'>
             <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
+            <div class="col-sm-8">
               <input type="password" class="form-control" id="inputPassword3" placeholder="change your password">
             </div>
           </div>
 
-          <div class="form-group">
+          <div class="form-group" id='form-group-pref'>
             <label for="locationUser3" class="col-sm-2 control-label">Default Location</label>
-            <div class="col-sm-10">
+            <div class="col-sm-8">
               <input type="text" class="form-control" id="locationUser3" placeholder="set your default location">
             </div>
           </div>
 
-          <div class="form-group">
+          <div class="form-group" id='form-group-pref'>
             <label for="restaurantPrefUser3" class="col-sm-2 control-label">Favorite Meeting Location</label>
-            <div class="col-sm-10">
+            <div class="col-sm-8">
               <input type="text" class="form-control" id="restaurantPrefUser3" placeholder="set your favorite place to meet">
             </div>
           </div>
 
-          <div class="form-group">
+          <div class="form-group" id='form-group-pref'>
             <div class="col-sm-offset-2 col-sm-10">
               <button type="submit" class="btn btn-default">Save Changes</button>
             </div>
@@ -105,11 +100,11 @@
 
         </form>
       </div>
-      <div class="rightBox col-md-3">
       </div>
+
     </div>
-  </div>
-  </div>
+
+
 
 
   <div class="panel panel-default">
