fixing logic for login after mergers

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -59,7 +59,8 @@
             <br> </div>
           <div class="leftBox col-md-4">
           </div>
-        </div <form action="/signup" method="post">
+        </div>
+        <form action="/signup" method="post">
         <div class="formBox">
           <label for="username">Enter a Username
             <br>
