fixed landing page links for pics

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,13 +60,13 @@
       <div class="col-md-3 rowStart">
       </div>
       <div class="col-xs-6 col-md-3 thumbnails">
-        <a href="#" class="thumbnail">
+        <a href="login" class="thumbnail">
           <img src="http://image.shutterstock.com/display_pic_with_logo/892306/98291444/stock-photo-plastic-ketchup-bottle-isolated-on-white-98291444.jpg" alt="http://image.shutterstock.com/display_pic_with_logo/892306/98291444/stock-photo-plastic-ketchup-bottle-isolated-on-white-98291444.jpg">
           <p> this is the description for the box</p>
         </a>
       </div>
       <div class="col-xs-6 col-md-3 thumbnails">
-        <a href="#" class="thumbnail">
+        <a href="signup" class="thumbnail">
           <img src="http://image.shutterstock.com/display_pic_with_logo/892306/98291444/stock-photo-plastic-ketchup-bottle-isolated-on-white-98291444.jpg" alt="http://image.shutterstock.com/display_pic_with_logo/892306/98291444/stock-photo-plastic-ketchup-bottle-isolated-on-white-98291444.jpg">
           <p> this is the description for the box</p>
         </a>
